--- a/application/templates/games/quiz.html
+++ b/application/templates/games/quiz.html
@@ -2,7 +2,12 @@
 
 {% block body %}
   <p style="padding:15px"><b>{{ quiz.name }}</b></p></td>
-  <p style="padding:15px">{{ result }}</p>
+  {% if result == 'Wrong answer!' %}
+  <p style="padding:15px" class="alert alert-danger" role="alert">{{ result }}</p>
+  {% endif %}
+  {% if result == 'Correct answer!' %}
+  <p style="padding:15px" class="alert alert-success" role="alert">{{ result }}</p>
+  {% endif %}
   <table>
     <tr>
       <td style="padding:15px"><b>{{ turn }}.&nbsp;</b></td>
@@ -12,10 +17,9 @@
   <table>
     {% for option in options %}
     <tr>
-      <td style="padding:15px">{{ option.name }}</td>
       <td style="padding:15px">
         <form method="POST" action="{{ url_for('quiz_choose', quiz_id=quiz.id, turn=turn, question_id=question.id, option_id=option.id) }}">
-          <input type="submit" value="Choose"/>
+          <input type="submit" value={{ option.name }} class="btn btn-dark"/>
         </form>
       </td>
     </tr>
