--- a/application/templates/quizzes/list.html
+++ b/application/templates/quizzes/list.html
@@ -2,7 +2,9 @@
 
 {% block body %}
 <p style="padding:15px">All your quizzes are listed here. Quizzes that have been created automatically cannot be modified.</p>
-<p style="padding:15px">{{ error }}</p>
+{% if error is defined %}
+<p style="padding:15px" class="alert alert-danger" role="alert">{{ error }}</p>
+{% endif %}
   <table>
     <tr>
       <form method="POST" action="{{ url_for('quizzes_sort', control=control) }}">
@@ -27,16 +29,21 @@
       </form>     
     </tr>
   </table>
-  <table>
-    <tr>
-      <th style="padding:15px">Quiz name</th>
-      <th style="padding:15px">Category</th>
-      <th style="padding:15px">Active</th>
-      <th style="padding:15px">Automatic</th>
-      {% if current_user.role == "ADMIN" and control == "control" %}
-      <th style="padding:15px">UserId</th>
-      {% endif %}
-    </tr>
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col" style="padding:15px">Quiz name</th>
+        <th scope="col" style="padding:15px">Category</th>
+        <th scope="col" style="padding:15px">Active</th>
+        <th scope="col" style="padding:15px">Automatic</th>
+        {% if current_user.role == "ADMIN" and control == "control" %}
+        <th scope="col" style="padding:15px">UserId</th>
+        {% endif %}
+        <th scope="col" style="padding:15px"></th>
+        <th scope="col" style="padding:15px"></th>
+        <th scope="col" style="padding:15px"></th>
+      </tr>
+    </thead>
     {% for quiz in quizzes %}
     <tr>
       <td style="padding:15px">{{ quiz.name  }}</td>
