--- a/application/templates/quizzes/new.html
+++ b/application/templates/quizzes/new.html
@@ -2,6 +2,9 @@
 {% extends "layout.html" %}
 
 {% block body %}
+{% if error is defined %}
+<p style="padding:15px" class="alert alert-danger" role="alert">{{ error }}</p>
+{% endif %}
 <p style="padding:15px">To create a quiz from your own questions, choose a name and a category. You can add questions to your quiz when you go to modify the quiz. <br/>Note that you cannot play your own quiz unless it is created automatically. For an automatic quiz, see below.</p>
 <form method="POST" action="{{ url_for('quizzes_create') }}">
   <table>
