--- a/application/templates/games/answer.html
+++ b/application/templates/games/answer.html
@@ -7,7 +7,7 @@
     <tr>
       <td style="padding:15px">
         <form method="POST" action="{{ url_for('options_choose', question_id=question.id, option_id=option.id) }}">
-          <input type="submit" value={{ option.name }} class="btn btn-dark"/>
+          <input type="submit" value="{{ option.name }}" class="btn btn-dark"/>
         </form>
       </td>
     </tr>
